refactor : Angular arborescence (user-list + quiz-list)